--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{endnotes}
 \usepackage{float}
 \usepackage[margin=.75in]{geometry}
 \usepackage{graphicx}
@@ -41,7 +42,7 @@ We plotted the number of classes in an initial point in a $l \times l$ grid as a
 \caption{Number of classes as a function of grid size. Interestingly, the relation appears to be approximately linear.}
 \end{figure}
 
-We also plotted the length of a cycle as a (multi-valued) function of the distance from $(0,0)$. A trend in this would indicate that the farther one is from $0$, the longer the cycle one is likely to find. This was accomplished by plotting all cycles in a given grid for multiple grid sizes. Interestingly, the grouping and relative shape of the scatter plot is similar for many sizes of grid, even though the absolute difference is large. This may imply a golden-ratio-like relation between the sizes of paths when the sizes are sorted into a monotonically increasing sequence. This may be so, because the Fibonacci sequence, whose consecutive ratios approximate the golden ratio, exhibits a similar scale-invariance.
+We also plotted the length of a cycle as a (multi-valued) function of the distance from $(0,0)$. A trend in this would indicate that the farther one is from $0$, the longer the cycle one is likely to find. This was accomplished by plotting all cycles in a given grid for multiple grid sizes. Interestingly, the grouping and relative shape of the scatter plot is similar for many sizes of grid, even though the absolute difference is large. Scale invariance of the clustering of the graph would be a really interesting result.
 
 \begin{figure}[H]
 \center
